# fast_strstr

benchmark/: Benchmark.hsc  benchmark.cabal
benchmark/algorithms/: mie_strstr.cpp
